--- a/src/App.css
+++ b/src/App.css
@@ -292,12 +292,12 @@ header .nav-links li:last-child {
 
 
 .modal {
-  font-size: 12px;
+  font-size: 25px;
 }
 .modal > .header {
   width: 100%;
-  border-bottom: 1px solid gray;
-  font-size: 18px;
+  border-bottom: 1px solid rgb(255, 255, 255);
+  font-size: 40px;
   text-align: center;
   padding: 5px;
 }
